plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = "${project.archives_base_name}-mc${project.minecraft_version}-fabric"
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
	inputs.property "version", project.version
	inputs.property "minecraft_dependency", project.minecraft_dependency

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version,
				"minecraft_dependency": inputs.properties.minecraft_dependency
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

tasks.register("runUnitChecks", JavaExec) {
	group = "verification"
	description = "Runs lightweight no-dependency unit checks."
	classpath = sourceSets.test.runtimeClasspath
	mainClass = "com.amagari.translationtool.AmagariUnitChecks"
}

tasks.register("runParaTranzSmokeCheck", JavaExec) {
	group = "verification"
	description = "Runs a live ParaTranz export/download smoke check when PARATRANZ_TOKEN is set."
	classpath = sourceSets.test.runtimeClasspath
	mainClass = "com.amagari.translationtool.ParaTranzSmokeCheck"
	doFirst {
		def token = System.getenv("PARATRANZ_TOKEN")
		if (token == null || token.isBlank()) {
			throw new GradleException("PARATRANZ_TOKEN is required")
		}
		args(token)
	}
}

check.dependsOn(tasks.named("runUnitChecks"))

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}" }
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}
}
